# syspro

./: CMakeLists.txt
Chapters/chap03/hw01/: copy.c  copy.h  main.c
Chapters/chap03/prob01/: copy.c  main.c
Chapters/chap04/hw01/: append  append.c  file1.txt  file2.txt
Chapters/chap04/hw02/: catEX  catEX.c  file1.txt  file2.txt  file3.txt
Chapters/chap04/prob/prob01/: test.txt
Chapters/chap04/prob/prob02/: copy.c
Chapters/chap04/prob/prob03/: line  line.c  test.txt
Chapters/chap04/prob/prob04/: fprint.c  test.txt
Chapters/chap04/prob/prob05/: fscan.c
Chapters/chap04/prob/prob06/: stcreate1.c
Chapters/chap04/prob/prob08/: buffer.c
Chapters/chap04/prob01/: cat.c
Chapters/chap04/prob02/: copy.c
Chapters/chap04/prob04/: student.h  test.txt
Chapters/chap04/prob05/: fscan.c
Chapters/chap04/prob06/: test.txt
Chapters/chap04/prob07/: stprint.c
chap03/hw01/: copy.c  main.c
chap03/prob01/: main.c  prob01_main.c
